examples/test/testpolicy11782.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11782
  namespace: namespace281
spec:
  podSelector:
    matchLabels:
      key22: value10
      key26: value40
      key0: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value37
          key48: value44
          key18: value10
      podSelector:
        matchLabels:
          key21: value44
          key28: value1
